Docs: bring Mage.Client.Web README up to date; fix dev proxy port
- README now documents the full API surface (session/matches/create/search/
  cardimg/decks load+save), all WS frame + prompt kinds, the implemented
  feature set, the --add-opens requirement + run-web.sh, MAGE_IMAGE_DIR, the
  card-DB note, and a realistic roadmap. Flags the critical decompressData()
  gotcha.
- Vite dev server now proxies /api and /ws to :8090 (matches run-web.sh
  default), instead of the stale :8080.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JFuQDDNjCYNaVZKzocPcDW